# 8086-emulator-web

./: .gitignore  404.html  Cargo.toml  LICENSE_MIT  README.md  asset-manifest.json  index.html  manifest.json  robots.txt
.cargo/: config
src/: lib.rs
src/data_parser/: data_parser.lalrpop  data_parser.rs
src/driver/: driver.rs  error_helper.rs  mod.rs  preprocess.rs  util.rs
src/preprocessor/: preprocessor.lalrpop  preprocessor.rs
static/css/: main.19cfbea6.chunk.css  main.19cfbea6.chunk.css.map  main.81e223b6.chunk.css  main.81e223b6.chunk.css.map  main.9bf47b15.chunk.css  main.9bf47b15.chunk.css.map  main.bd0f1456.chunk.css  main.bd0f1456.chunk.css.map  main.d08cbe4d.chunk.css  main.d08cbe4d.chunk.css.map
static/js/: 2.0148509c.chunk.js  2.0148509c.chunk.js.map  2.6007ea4f.chunk.js  2.6007ea4f.chunk.js.LICENSE.txt  2.6007ea4f.chunk.js.map  2.6ce9225f.chunk.js  2.6ce9225f.chunk.js.LICENSE.txt  2.6ce9225f.chunk.js.map  2.757a9ee8.chunk.js  2.757a9ee8.chunk.js.LICENSE.txt  2.757a9ee8.chunk.js.map  2.9c323a04.chunk.js  2.9c323a04.chunk.js.map  2.d04c65c5.chunk.js  2.d04c65c5.chunk.js.map  2.e681b324.chunk.js  2.e681b324.chunk.js.map  2.fd85d4c2.chunk.js  2.fd85d4c2.chunk.js.map  3.135dd225.chunk.js  3.135dd225.chunk.js.map  3.1aa570d9.chunk.js  3.1aa570d9.chunk.js.map  3.3b5b9470.chunk.js  3.3b5b9470.chunk.js.map  3.3fface45.chunk.js  3.3fface45.chunk.js.map  3.4bd26e86.chunk.js  3.4bd26e86.chunk.js.map  3.4dcca470.chunk.js  3.4dcca470.chunk.js.map  3.53e7a98a.chunk.js  (+73 more)
webapp/: .eslintcache  config-overrides.js  package-lock.json  package.json
(+22 files in other folders)
