[package]
name = "emulator-8086-web"
version = "0.1.0"
authors = ["Yashodhan Joshi"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Web bindings and app for 8086 emulator"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# check https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]



[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
lalrpop-util = "0.19.1"
regex = "1"
console_error_panic_hook = { version = "0.1.6", optional = true }
lib8086 = { git = "https://github.com/YJDoc2/8086-Emulator", package="emulator_8086"}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"
